# advent-of-code-2015

./: Cargo.toml
common/src/: lib.rs
common/tests/: test_exec.rs
day_01_not_quite_lisp/: Cargo.toml
day_01_not_quite_lisp/src/: main.rs
day_02_i_was_told_there_would_be_no_math/: Cargo.toml
day_02_i_was_told_there_would_be_no_math/src/: main.rs
day_03_perfectly_spherical_houses_in_a_vacuum/: Cargo.toml
day_03_perfectly_spherical_houses_in_a_vacuum/resources/: input_short.txt
day_03_perfectly_spherical_houses_in_a_vacuum/src/: main.rs
day_04_the_ideal_stocking_stuffer/: Cargo.toml
day_04_the_ideal_stocking_stuffer/src/: main.rs
day_05_doesnt_he_have_intern_elves_for_this/: Cargo.toml
day_05_doesnt_he_have_intern_elves_for_this/src/: main.rs
day_06_probably_a_fire_hazard/: Cargo.toml
day_06_probably_a_fire_hazard/src/: main.rs
day_07_some_assembly_required/: Cargo.toml
day_07_some_assembly_required/src/: main.rs
day_08_matchsticks/: Cargo.toml
day_08_matchsticks/resources/: input_sample.txt
day_08_matchsticks/src/: main.rs
day_09_all_in_a_single_night/: Cargo.toml
day_09_all_in_a_single_night/src/: main.rs
day_10_elves_look_elves_say/: Cargo.toml
day_10_elves_look_elves_say/src/: main.rs
day_11_corporate_policy/: Cargo.toml
day_11_corporate_policy/src/: main.rs
day_12_js_abacus_framework_io/: Cargo.toml
day_12_js_abacus_framework_io/src/: main.rs
day_13_knights_of_the_dinner_table/: Cargo.toml
day_13_knights_of_the_dinner_table/resources/: input_me.txt
day_13_knights_of_the_dinner_table/src/: main.rs
day_14_reindeer_olympics/: Cargo.toml
day_14_reindeer_olympics/src/: main.rs
day_15_science_for_hungry_people/: Cargo.toml
day_16_aunt_sue/: Cargo.toml
day_17_no_such_thing_as_too_much/: Cargo.toml
day_18_like_a_gif_for_your_yard/: Cargo.toml
day_19_medicine_for_rudolph/: Cargo.toml
day_20_infinite_elves_and_infinite_houses/: Cargo.toml
day_21_rpg_simulator_20XX/: Cargo.toml
day_21_rpg_simulator_20xx/: Cargo.toml
day_22_wizard_simulator_20XX/: Cargo.toml
day_22_wizard_simulator_20xx/: Cargo.toml
day_23_opening_the_turing_lock/: Cargo.toml
day_24_it_hangs_in_the_balance/: Cargo.toml
day_25_let_it_snow/: Cargo.toml
(+218 files in other folders)
