[workspace]
resolver = "3"
members = [
    "day_01_not_quite_lisp",
    "day_02_i_was_told_there_would_be_no_math",
    "day_03_perfectly_spherical_houses_in_a_vacuum",
    "day_04_the_ideal_stocking_stuffer",
    "day_05_doesnt_he_have_intern_elves_for_this",
    "day_06_probably_a_fire_hazard",
    "day_07_some_assembly_required",
    "day_08_matchsticks", "day_09_all_in_a_single_night",
]

[workspace.dependencies]
hex = { version = "0.*" }
itertools = { version = "0.*" }
md5 = { version = "0.*" }
pathfinding = { version = "4.*" }
regex = { version = "1.*" }
puzzler = { git = "https://github.com/palcoo42/puzzler.git", branch = "master" }
