[workspace]
resolver = "3"
members = [
    "day_01_not_quite_lisp",
    "day_02_i_was_told_there_would_be_no_math",
    "day_03_perfectly_spherical_houses_in_a_vacuum",
    "day_04_the_ideal_stocking_stuffer",
    "day_05_doesnt_he_have_intern_elves_for_this",
    "day_06_probably_a_fire_hazard",
    "day_07_some_assembly_required",
    "day_08_matchsticks",
    "day_09_all_in_a_single_night",
    "day_10_elves_look_elves_say",
    "day_11_corporate_policy",
    "day_12_js_abacus_framework_io",
    "day_13_knights_of_the_dinner_table",
    "day_14_reindeer_olympics", "day_15_science_for_hungry_people", "day_16_aunt_sue",
]

[workspace.dependencies]
hex = { version = "0.*" }
itertools = { version = "0.*" }
md5 = { version = "0.*" }
pathfinding = { version = "4.*" }
puzzler = { git = "https://github.com/palcoo42/puzzler.git", branch = "master" }
regex = { version = "1.*" }
serde = { version = "1.*" }
serde_json = { version = "1.*" }
